chromeos: Display Caps Lock setting for non-CrOS keyboards.

Let the user remap the Caps Lock key when
--has-chromeos-keyboard isn't provided (i.e. the internal
keyboard has a Caps Lock key in place of Search). Formerly,
the setting was only shown when an external keyboard was
connected.

Also add unit tests for KeyboardHandler and delete some
unused variables. Unrelatedly, drop an accidentally-repeated
call in PowerHandlerTest.

BUG=742613

Change-Id: I56d7ccb0bd5e054b9e815fb4d8d457c0729ada0c