chrome/browser/ui/webui/settings/chromeos/device_keyboard_handler.h
@@ -14,15 +14,9 @@ namespace base {
 class ListValue;
 }
 
-namespace content {
-class WebUI;
-}
-
 namespace ui {
 class InputDeviceManager;
 }
-
-class Profile;
 
 namespace chromeos {
 namespace settings {
@@ -32,7 +26,24 @@ class KeyboardHandler
     : public ::settings::SettingsPageUIHandler,
       public ui::InputDeviceEventObserver {
  public:
-  explicit KeyboardHandler(content::WebUI* webui);
+  // Name of the message sent to WebUI when the keys that should be shown
+  // change.
+  static const char kShowKeysChangedName[];
+
+  // Class used by tests to interact with KeyboardHandler internals.
+  class TestAPI {
+   public:
+    explicit TestAPI(KeyboardHandler* handler) { handler_ = handler; }
+
+    // Simulates a request from WebUI to initialize the page.
+    void Initialize();
+
+   private:
+    KeyboardHandler* handler_;  // Not owned.
+    DISALLOW_COPY_AND_ASSIGN(TestAPI);
+  };
+
+  KeyboardHandler();
   ~KeyboardHandler() override;
 
   // SettingsPageUIHandler implementation.
@@ -53,8 +64,6 @@ class KeyboardHandler
   // Shows or hides the Caps Lock and Diamond key settings based on whether the
   // system status.
   void UpdateShowKeys();
-
-  Profile* profile_;  // Weak pointer.
 
   ScopedObserver<ui::InputDeviceManager, KeyboardHandler> observer_;
 
