ui/events/test/device_data_manager_test_api_impl.cc
@@ -53,5 +53,25 @@ void DeviceDataManagerTestAPI::OnDeviceListsComplete() {
   DeviceDataManager::GetInstance()->OnDeviceListsComplete();
 }
 
+void DeviceDataManagerTestAPI::SetTouchscreenDevices(
+    const std::vector<TouchscreenDevice>& devices) {
+  DeviceDataManager::GetInstance()->touchscreen_devices_ = devices;
+}
+
+void DeviceDataManagerTestAPI::SetKeyboardDevices(
+    const std::vector<InputDevice>& devices) {
+  DeviceDataManager::GetInstance()->keyboard_devices_ = devices;
+}
+
+void DeviceDataManagerTestAPI::SetMouseDevices(
+    const std::vector<InputDevice>& devices) {
+  DeviceDataManager::GetInstance()->mouse_devices_ = devices;
+}
+
+void DeviceDataManagerTestAPI::SetTouchpadDevices(
+    const std::vector<InputDevice>& devices) {
+  DeviceDataManager::GetInstance()->touchpad_devices_ = devices;
+}
+
 }  // namespace test
 }  // namespace ui
