ui/events/test/device_data_manager_test_api_stub.cc
@@ -48,5 +48,25 @@ void DeviceDataManagerTestAPI::OnDeviceListsComplete() {
   NOTREACHED();
 }
 
+void DeviceDataManagerTestAPI::SetTouchscreenDevices(
+    const std::vector<TouchscreenDevice>& devices) {
+  NOTREACHED();
+}
+
+void DeviceDataManagerTestAPI::SetKeyboardDevices(
+    const std::vector<InputDevice>& devices) {
+  NOTREACHED();
+}
+
+void DeviceDataManagerTestAPI::SetMouseDevices(
+    const std::vector<InputDevice>& devices) {
+  NOTREACHED();
+}
+
+void DeviceDataManagerTestAPI::SetTouchpadDevices(
+    const std::vector<InputDevice>& devices) {
+  NOTREACHED();
+}
+
 }  // namespace test
 }  // namespace ui
